Fixed header z-index

--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ header {
     background-color: var(--dark-color);
     position: fixed;
     top: 0px;
-    z-index: 3;
+    z-index: 10;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
@@ -32,7 +32,7 @@ header {
     position: fixed;
     width: 90%;
     top: -200;
-    z-index: 2;
+    z-index: 9;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     transition: top 0.5s ease-out;
